Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8185983/RejectTypeArgsOnSelectTest.out
RejectTypeArgsOnSelectTest.java:11:104: compiler.err.illegal.start.of.expr
1 error
