Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8185983/RejectTypeArgsOnSelectTest.java
/*
 * @test  /nodynamiccopyright/
 * @bug 8185983
 * @summary Javac should reject TypeArguments on field access expression
 * @compile/fail/ref=RejectTypeArgsOnSelectTest.out -XDrawDiagnostics RejectTypeArgsOnSelectTest.java
 */

import java.util.*;

class RejectTypeArgsOnSelectTest {
    Iterator<RejectTypeArgsOnSelectTest> nullIter = Collections.<RejectTypeArgsOnSelectTest>EMPTY_LIST.iterator();
}
